--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
+                <th scope="col">Country</th>
               </tr>
             </thead>
             <tbody id="data">
