--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Covid-19</a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -28,38 +28,37 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="survey.html ">Survey</a>
-              </li>
+                    <a class="nav-link" href="survey.html ">Survey</a>
+                </li>
             </ul>
         </div>
     </nav>
     <div class="container">
-        
-        <h1 id="country"></h1>
-
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">date</th>
-                    <th scope="col">confirmed</th>
-                    <th scope="col">deaths</th>
-                    <th scope="col">recovered</th>
-                </tr>
-            </thead>
-            <tbody id="data">
-            </tbody>
-        </table>
+        <div>
+            <div class="d-flex justify-content-center mt-5">
+                <img src="image/profile.jpg" class="rounded-circle" width="25%">
+            </div>
+        </div>
+        <div class="container">
+        <div class="col">
+            <div class="d-flex justify-content-center mt-5">
+                <div class="row"><p class="font-weight-bold">6130613011</p></div></div>
+                <div class="d-flex justify-content-center ">
+                <div class="row"><p class="font-weight-normal">Arnont Photdoing</p></div></div>
+       
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="js/country.js"></script>
 </body>
 
 </html>
